--- a/PrivateMail/Cells/AddressTableViewCell.xib
+++ b/PrivateMail/Cells/AddressTableViewCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -14,26 +12,29 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="50" id="KGk-i7-Jjw" customClass="AddressTableViewCell" customModule="PrivateMail" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="49.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2vO-bE-yCl">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="50.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h9Z-Ch-LuI">
-                                <rect key="frame" x="15" y="0.0" width="25" height="50.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h9Z-Ch-LuI">
+                                <rect key="frame" x="15" y="0.0" width="40" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="NlK-sk-Llr"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="bDG-Tm-kr0">
-                                <rect key="frame" x="40" y="0.0" width="234" height="50.5"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="55" y="0.0" width="219" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewLayout key="collectionViewLayout" id="ZZl-nc-8Ir" customClass="LeftAlignedCollectionViewFlowLayout" customModule="PrivateMail" customModuleProvider="target"/>
                             </collectionView>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ha-yb-ccL" userLabel="Plus button">
-                                <rect key="frame" x="274" y="0.0" width="46" height="50.5"/>
+                                <rect key="frame" x="274" y="0.0" width="46" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="46" id="53Y-MT-qNC"/>
                                 </constraints>
@@ -42,7 +43,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="7ha-yb-ccL" firstAttribute="leading" secondItem="bDG-Tm-kr0" secondAttribute="trailing" id="7V1-eX-odD"/>
                             <constraint firstItem="bDG-Tm-kr0" firstAttribute="leading" secondItem="h9Z-Ch-LuI" secondAttribute="trailing" id="APv-Bu-31S"/>
@@ -50,7 +51,6 @@
                             <constraint firstAttribute="bottom" secondItem="7ha-yb-ccL" secondAttribute="bottom" id="It9-ke-FGa"/>
                             <constraint firstItem="7ha-yb-ccL" firstAttribute="top" secondItem="2vO-bE-yCl" secondAttribute="top" id="QbC-C6-PvW"/>
                             <constraint firstAttribute="bottom" secondItem="bDG-Tm-kr0" secondAttribute="bottom" id="QbX-Ck-hlM"/>
-                            <constraint firstItem="bDG-Tm-kr0" firstAttribute="leading" secondItem="2vO-bE-yCl" secondAttribute="leading" constant="40" id="doe-dC-sPL"/>
                             <constraint firstItem="h9Z-Ch-LuI" firstAttribute="top" secondItem="2vO-bE-yCl" secondAttribute="top" id="h7u-0z-RX8"/>
                             <constraint firstItem="bDG-Tm-kr0" firstAttribute="top" secondItem="2vO-bE-yCl" secondAttribute="top" id="q2B-W7-9YM"/>
                             <constraint firstAttribute="height" constant="50" id="tRx-aZ-ZeP"/>
