--- a/PrivateMail/Cells/ContactDetailTableViewCell.xib
+++ b/PrivateMail/Cells/ContactDetailTableViewCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,7 +13,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ko2-32-MTD">
@@ -28,8 +26,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Vasil" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sgf-2u-FKB">
-                        <rect key="frame" x="71" y="0.0" width="233" height="43.5"/>
-                        <nil key="textColor"/>
+                        <rect key="frame" x="71" y="0.0" width="233" height="22"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
@@ -37,16 +34,20 @@
                         </connections>
                     </textField>
                     <label hidden="YES" opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show additional fields" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYQ-wQ-DZc">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="22"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <switch hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dad-BF-upD">
+                        <rect key="frame" x="253" y="-4.5" width="51" height="31"/>
+                    </switch>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Ko2-32-MTD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="4VB-YZ-mNc"/>
                     <constraint firstItem="KYQ-wQ-DZc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Fsf-an-UpO"/>
+                    <constraint firstAttribute="trailing" secondItem="Dad-BF-upD" secondAttribute="trailing" constant="18" id="KYr-Ls-k8O"/>
                     <constraint firstAttribute="bottom" secondItem="Ko2-32-MTD" secondAttribute="bottom" id="LfV-KE-OsK"/>
                     <constraint firstAttribute="bottom" secondItem="sgf-2u-FKB" secondAttribute="bottom" id="Ojb-z0-NGp"/>
                     <constraint firstAttribute="trailing" secondItem="sgf-2u-FKB" secondAttribute="trailing" constant="16" id="Sa7-E4-1j7"/>
@@ -55,12 +56,14 @@
                     <constraint firstAttribute="trailing" secondItem="KYQ-wQ-DZc" secondAttribute="trailing" id="bad-DZ-Vn8"/>
                     <constraint firstItem="sgf-2u-FKB" firstAttribute="leading" secondItem="Ko2-32-MTD" secondAttribute="trailing" constant="5" id="dh4-tr-2L1"/>
                     <constraint firstItem="sgf-2u-FKB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="gc8-T9-ncB"/>
+                    <constraint firstItem="Dad-BF-upD" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="u5f-WI-dpm"/>
                     <constraint firstAttribute="bottom" secondItem="KYQ-wQ-DZc" secondAttribute="bottom" id="wgE-9g-s6s"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="contentField" destination="sgf-2u-FKB" id="Pfw-7E-soK"/>
                 <outlet property="desctiptionLabel" destination="Ko2-32-MTD" id="mid-Dq-OpH"/>
+                <outlet property="groupSwitch" destination="Dad-BF-upD" id="buR-dg-eJA"/>
                 <outlet property="showAdditionalFieldsLabel" destination="KYQ-wQ-DZc" id="71P-Rc-8YK"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="97.767857142857139"/>
